# graphics-apps

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindEGL.cmake  FindGBM.cmake  FindGStreamer1.cmake  FindLibDRM.cmake  FindLibFfi.cmake  FindLibGlib2.cmake  FindLibXkbCommon.cmake  FindMarvellSDK.cmake  FindOpenGLES2.cmake  FindRPIBcmHost.cmake  FindRPIVcHostIf.cmake  FindWayland.cmake  FindWaylandEGL.cmake  FindWesterosSimpleShell.cmake  dump_all_vars.cmake  show_target_properties.cmake
drm-info/: CMakeLists.txt  DrmInfo.cpp  DrmInfo.h
egl-test/: CMakeLists.txt  NativeDisplay.h  NativeWindow.h  Util.h  main.cpp
egl-test/rpi/: NativeDisplay-rpi.cpp  NativeDisplay-rpi.h  NativeWindow-rpi.cpp  NativeWindow-rpi.h
egl-test/synaptics/: NativeDisplay-synaptics.cpp  NativeDisplay-synaptics.h  NativeWindow-synaptics.cpp  NativeWindow-synaptics.h
egl-test/x86_64/: NativeDisplay-x64.cpp  NativeDisplay-x64.h  NativeWindow-x64.cpp  NativeWindow-x64.h
egl-test/x86_64/drm-info/: CMakeLists.txt  DrmInfo.cpp  DrmInfo.h  main.cpp
egl-test/x86_64/gbm-info/: CMakeLists.txt  GbmInfo.h  main.cpp
gbm-info/: CMakeLists.txt  GbmInfo.cpp  GbmInfo.h  main.cpp
gstreamer-test/: CMakeLists.txt  main.cpp
hello-wayland/: CMakeLists.txt
simple-egl/: CMakeLists.txt  example.cpp  main.cpp
westeros/: CMakeLists.txt  Makefile.am  configure.ac  westeros-compositor.cpp  westeros-compositor.h  westeros-test.cpp
westeros-test/: CMakeLists.txt  main.cpp
westeros/brcm/: Makefile.am  configure.ac
westeros/cfg/: config.h
westeros/protocol/: .gitignore
westeros/simpleshell/: westeros-simpleshell.cpp
westeros/syna/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
westeros/syna/.libs/: libwesteros_gl.la  libwesteros_gl.lai
westeros/syna/autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
westeros/syna/cfg/: config.h  config.h.in  stamp-h1
westeros/syna/westeros-gl/: libwesteros_gl_la-westeros-gl.lo  westeros-gl.cpp  westeros-gl.h
westeros/syna/westeros-sink/: Makefile.am  Makefile.in  mpegstreaminfo.h  westeros-sink-soc.c  westeros-sink-soc.h  westeros-sink.c  westeros-sink.h
weston-simple-egl/: CMakeLists.txt  config.h  simple-egl.c
weston-simple-egl/protocol/: fullscreen-shell-unstable-v1-client-protocol.h  fullscreen-shell-unstable-v1-protocol.c  fullscreen-shell-unstable-v1-server-protocol.h  input-method-unstable-v1-client-protocol.h  input-method-unstable-v1-protocol.c  input-method-unstable-v1-server-protocol.h  ivi-application-client-protocol.h  ivi-application-server-protocol.h  ivi-hmi-controller-client-protocol.h  ivi-hmi-controller-protocol.c  ivi-hmi-controller-server-protocol.h  linux-dmabuf-unstable-v1-client-protocol.h  linux-dmabuf-unstable-v1-protocol.c  linux-dmabuf-unstable-v1-server-protocol.h  pointer-constraints-unstable-v1-server-protocol.h  relative-pointer-unstable-v1-server-protocol.h  text-cursor-position-client-protocol.h  text-cursor-position-protocol.c  text-cursor-position-server-protocol.h  text-input-unstable-v1-client-protocol.h  text-input-unstable-v1-server-protocol.h  weston-desktop-shell-protocol.c  weston-desktop-shell-server-protocol.h  weston-screenshooter-client-protocol.h  weston-screenshooter-protocol.c  weston-screenshooter-server-protocol.h  weston-test-client-protocol.h  weston-test-protocol.c  weston-test-server-protocol.h  xdg-shell-unstable-v6-client-protocol.h  xdg-shell-unstable-v6-server-protocol.h
